--- a/templates/gameIA.html
+++ b/templates/gameIA.html
@@ -6,7 +6,7 @@
     <title>La Vieja</title>
 </head>
 <body>
-    <h1>Este es el juego</h1>
-    <h2>Modo de juego seleccionado: {{ gamemode }}</h2>
+    <h1>Este es el juego IA</h1>
+    <h2>Nombre del jugador 1: {{ player1 }}</h2>
 </body>
 </html>
