--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
       href="/static/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="/static/favicon/site.webmanifest" />
-    <link rel="stylesheet" href="/static/index.css" />
+    <link rel="stylesheet" href="/static/css/index.css" />
     <style>
       @import url("https://fonts.cdnfonts.com/css/bukhari-script");
     </style>
@@ -57,7 +57,7 @@
               </h2>
               <img
                 class="w-10 h-10 transition hover:scale-110"
-                src="/static/equis.webp"
+                src="/static/img/equis.webp"
                 alt="X"
               />
             </div>
@@ -79,7 +79,7 @@
               </h2>
               <img
                 class="w-10 h-10 transition hover:scale-110"
-                src="/static/circulo.webp"
+                src="/static/img/circulo.webp"
                 alt="X"
               />
             </div>
