--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
               <h2
                 class="mt-5 text-[#f5f5f5] text-center text-xl md:text-2xl font-bold"
               >
-                Nombre del jugador 1
+                Nombre jugador 1
               </h2>
               <img
                 class="w-10 h-10 transition hover:scale-110"
@@ -75,7 +75,7 @@
               <h2
                 class="mt-5 text-[#f5f5f5] text-center text-xl md:text-2xl font-bold"
               >
-                Nombre del jugador 2
+                Nombre jugador 2
               </h2>
               <img
                 class="w-10 h-10 transition hover:scale-110"
@@ -103,59 +103,59 @@
         </div>
       </main>
     </div>
-    <footer>
-      <div
-        class="bg-[#f5f5f5] w-full mt-10 flex justify-between items-center p-4"
-      >
-        <div class="space-y-4">
-          <p class="text-[#0b6789] text-xs md:text-sm">
-            Diseño y aplicación web creada por <b>Gustavo Fernandes</b>
-          </p>
-          <div class="flex items-center space-x-2">
-            <a
-              href="https://www.instagram.com/gus.fer07?igsh=enFwMXB4czFnbmU%3D"
-              title="Mi instagram personal"
-              target="_blank"
-              class="transition hover:scale-110"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                x="0px"
-                y="0px"
-                width="40"
-                height="40"
-                viewBox="0 0 50 50"
-              >
-                <path
-                  d="M 16 3 C 8.8324839 3 3 8.8324839 3 16 L 3 34 C 3 41.167516 8.8324839 47 16 47 L 34 47 C 41.167516 47 47 41.167516 47 34 L 47 16 C 47 8.8324839 41.167516 3 34 3 L 16 3 z M 16 5 L 34 5 C 40.086484 5 45 9.9135161 45 16 L 45 34 C 45 40.086484 40.086484 45 34 45 L 16 45 C 9.9135161 45 5 40.086484 5 34 L 5 16 C 5 9.9135161 9.9135161 5 16 5 z M 37 11 A 2 2 0 0 0 35 13 A 2 2 0 0 0 37 15 A 2 2 0 0 0 39 13 A 2 2 0 0 0 37 11 z M 25 14 C 18.936712 14 14 18.936712 14 25 C 14 31.063288 18.936712 36 25 36 C 31.063288 36 36 31.063288 36 25 C 36 18.936712 31.063288 14 25 14 z M 25 16 C 29.982407 16 34 20.017593 34 25 C 34 29.982407 29.982407 34 25 34 C 20.017593 34 16 29.982407 16 25 C 16 20.017593 20.017593 16 25 16 z"
-                ></path>
-              </svg>
-            </a>
-            <a
-              href="https://github.com/gusfer07/la-vieja-final-project"
-              title="Repositorio en GitHub de este proyecto"
-              target="_blank"
-              class="transition hover:scale-110"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                x="0px"
-                y="0px"
-                width="50"
-                height="50"
-                viewBox="0 0 72 72"
-              >
-                <path
-                  d="M36,12c13.255,0,24,10.745,24,24c0,10.656-6.948,19.685-16.559,22.818c0.003-0.009,0.007-0.022,0.007-0.022	s-1.62-0.759-1.586-2.114c0.038-1.491,0-4.971,0-6.248c0-2.193-1.388-3.747-1.388-3.747s10.884,0.122,10.884-11.491	c0-4.481-2.342-6.812-2.342-6.812s1.23-4.784-0.426-6.812c-1.856-0.2-5.18,1.774-6.6,2.697c0,0-2.25-0.922-5.991-0.922	c-3.742,0-5.991,0.922-5.991,0.922c-1.419-0.922-4.744-2.897-6.6-2.697c-1.656,2.029-0.426,6.812-0.426,6.812	s-2.342,2.332-2.342,6.812c0,11.613,10.884,11.491,10.884,11.491s-1.097,1.239-1.336,3.061c-0.76,0.258-1.877,0.576-2.78,0.576	c-2.362,0-4.159-2.296-4.817-3.358c-0.649-1.048-1.98-1.927-3.221-1.927c-0.817,0-1.216,0.409-1.216,0.876s1.146,0.793,1.902,1.659	c1.594,1.826,1.565,5.933,7.245,5.933c0.617,0,1.876-0.152,2.823-0.279c-0.006,1.293-0.007,2.657,0.013,3.454	c0.034,1.355-1.586,2.114-1.586,2.114s0.004,0.013,0.007,0.022C18.948,55.685,12,46.656,12,36C12,22.745,22.745,12,36,12z"
-                ></path>
-              </svg>
-            </a>
-          </div>
-        </div>
-        <h1 class="text-[#0b6789] font-bukhari text-3xl text-center">
-          ¡Gracias por jugar!
-        </h1>
-      </div>
-    </footer>
   </body>
+  <footer>
+    <div
+      class="bg-[#f5f5f5] w-full mt-10 flex justify-between items-center p-4"
+    >
+      <div class="space-y-4">
+        <p class="text-[#0b6789] text-xs md:text-sm">
+          Diseño y aplicación web creada por <b>Gustavo Fernandes</b>
+        </p>
+        <div class="flex items-center space-x-2">
+          <a
+            href="https://www.instagram.com/gus.fer07?igsh=enFwMXB4czFnbmU%3D"
+            title="Mi instagram personal"
+            target="_blank"
+            class="transition hover:scale-110"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="40"
+              height="40"
+              viewBox="0 0 50 50"
+            >
+              <path
+                d="M 16 3 C 8.8324839 3 3 8.8324839 3 16 L 3 34 C 3 41.167516 8.8324839 47 16 47 L 34 47 C 41.167516 47 47 41.167516 47 34 L 47 16 C 47 8.8324839 41.167516 3 34 3 L 16 3 z M 16 5 L 34 5 C 40.086484 5 45 9.9135161 45 16 L 45 34 C 45 40.086484 40.086484 45 34 45 L 16 45 C 9.9135161 45 5 40.086484 5 34 L 5 16 C 5 9.9135161 9.9135161 5 16 5 z M 37 11 A 2 2 0 0 0 35 13 A 2 2 0 0 0 37 15 A 2 2 0 0 0 39 13 A 2 2 0 0 0 37 11 z M 25 14 C 18.936712 14 14 18.936712 14 25 C 14 31.063288 18.936712 36 25 36 C 31.063288 36 36 31.063288 36 25 C 36 18.936712 31.063288 14 25 14 z M 25 16 C 29.982407 16 34 20.017593 34 25 C 34 29.982407 29.982407 34 25 34 C 20.017593 34 16 29.982407 16 25 C 16 20.017593 20.017593 16 25 16 z"
+              ></path>
+            </svg>
+          </a>
+          <a
+            href="https://github.com/gusfer07/la-vieja-final-project"
+            title="Repositorio en GitHub de este proyecto"
+            target="_blank"
+            class="transition hover:scale-110"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="50"
+              height="50"
+              viewBox="0 0 72 72"
+            >
+              <path
+                d="M36,12c13.255,0,24,10.745,24,24c0,10.656-6.948,19.685-16.559,22.818c0.003-0.009,0.007-0.022,0.007-0.022	s-1.62-0.759-1.586-2.114c0.038-1.491,0-4.971,0-6.248c0-2.193-1.388-3.747-1.388-3.747s10.884,0.122,10.884-11.491	c0-4.481-2.342-6.812-2.342-6.812s1.23-4.784-0.426-6.812c-1.856-0.2-5.18,1.774-6.6,2.697c0,0-2.25-0.922-5.991-0.922	c-3.742,0-5.991,0.922-5.991,0.922c-1.419-0.922-4.744-2.897-6.6-2.697c-1.656,2.029-0.426,6.812-0.426,6.812	s-2.342,2.332-2.342,6.812c0,11.613,10.884,11.491,10.884,11.491s-1.097,1.239-1.336,3.061c-0.76,0.258-1.877,0.576-2.78,0.576	c-2.362,0-4.159-2.296-4.817-3.358c-0.649-1.048-1.98-1.927-3.221-1.927c-0.817,0-1.216,0.409-1.216,0.876s1.146,0.793,1.902,1.659	c1.594,1.826,1.565,5.933,7.245,5.933c0.617,0,1.876-0.152,2.823-0.279c-0.006,1.293-0.007,2.657,0.013,3.454	c0.034,1.355-1.586,2.114-1.586,2.114s0.004,0.013,0.007,0.022C18.948,55.685,12,46.656,12,36C12,22.745,22.745,12,36,12z"
+              ></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <h1 class="text-[#0b6789] font-bukhari text-3xl text-center">
+        ¡Gracias por jugar!
+      </h1>
+    </div>
+  </footer>
 </html>
