--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="MobileOptimized" content="width" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La Vieja</title>
     <link
@@ -31,7 +32,7 @@
     <div class="container px-20 mx-auto">
       <main>
         <div
-          class="h-24 mt-10 md:mt-16 transition hover:animate-bounce hover:cursor delay-200"
+          class="h-24 mt-16 transition hover:animate-bounce hover:cursor delay-200"
         >
           <div class="relative">
             <h1
@@ -104,9 +105,9 @@
       </main>
     </div>
   </body>
-  <footer>
+  <footer style="background-color: #f5f5f5">
     <div
-      class="bg-[#f5f5f5] w-full mt-10 flex justify-between items-center p-4"
+      class="bg-[#f5f5f5] w-full mt-16 flex justify-between items-center p-4"
     >
       <div class="space-y-4">
         <p class="text-[#0b6789] text-xs md:text-sm">
