--- a/templates/error.html
+++ b/templates/error.html
@@ -1,9 +1,19 @@
-{% extends "layout.html" %}
-
-{% block body %}
-
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>La Vieja</title>
+  </head>
+  <body>
     <h1>Fatal Error</h1>
-    <img src="https://http.cat/510" alt="cat image" width="400px" height="400px">
+    <h2>No pongas el mismo nombre en ambos jugadores</h2>
+    <img
+      src="https://http.cat/510"
+      alt="cat image"
+      width="400px"
+      height="400px"
+    />
     <a href="/">Inicio</a>
-
-{% endblock %}
+  </body>
+</html>
